fixed issue where the containers were set to 104% causing some horizontal scroll on the screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 .container-fluid{
     border-top: solid 2px black;
     padding-top: 20px;
+    width: 96%;
     margin-left: 2%;
     margin-right: 2%;
 }
